--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -14,8 +14,8 @@
 			<header class="header">
 				<div class="header__inner">
 					<div class="header__left-bar">
-						<a class="header__link" href="../about.html"><img  class="header__photo" src="../img/2.jpg" alt="myphoto"></a>
-						<a class="header__name" href="../about.html">Дмитрий Игнатенко</a>
+						<a class="header__link" href="../index.html"><img  class="header__photo" src="../img/2.jpg" alt="myphoto"></a>
+						<a class="header__name" href="../index.html">Дмитрий Игнатенко</a>
 					</div>
 					<div class="header__right-bar">
 						<a class="header__link" href="#">Мои контакты </a>
@@ -39,7 +39,7 @@
 						<ul class="navigation__item">
 							<li> 
 								<div class="navigation__button">
-									<a class="navigation__link" href="../about.html">
+									<a class="navigation__link" href="../index.html">
 										<div class="navigation__text-1">Информация</div>
 										<img class="navigation__img" src="../img/settings.png">
 										<div class="navigation__text-2">Обо мне</div>
