--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1">  -->
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500|Open+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="libs/fontawersome/main/all.min.css">
-	<title>Document</title>
+	<title>Ihnatenko site</title>
 </head>
 <!-- <script src="script.js"></script> -->
 <body>
@@ -16,8 +17,8 @@
 			<header class="header">
 				<div class="header__inner">
 					<div class="header__left-bar">
-						<a class="header__link" href="about.html"><img  class="header__photo" src="img/2.jpg" alt="myphoto"></a>
-						<a class="header__name" href="about.html">Дмитрий Игнатенко</a>
+						<a class="header__link" href="#"><img  class="header__photo" src="img/2.jpg" alt="myphoto"></a>
+						<a class="header__name" href="#">Дмитрий Игнатенко</a>
 					</div>
 					<div class="header__right-bar">
 						<a class="header__link" href="#">Мои контакты </a>
@@ -76,11 +77,10 @@
 					<div class="content__text">
 						<h1 class="content__title">Обо мне</h1>
 						<div class="content__description">
-							<p>Игнатенко Дмитрий Евгеньевич. </p>
-							<p>Проживаю в Украине, г.Николаев.</p>
+						   <p>Игнатенко Дмитрий Евгеньевич. Проживаю в Украине, г.Николаев.</p>
 								<p>В 2014 году закончил Национальный универститет кораблестроения по специальности "Информационные управляющие системы и технологии". </p>
-								<p>Получил квалификацию- инженер-системотехник.</p>
-								<p>Увлекаюсь Web-разработкой и SMM продвижением</p>
+								<p>Получил квалификацию: инженер-системотехник.</p>
+								<p>Увлекаюсь Web-разработкой и SMM продвижением.</p>
 						</div>	
 						<div class="content__resume">	
 							<a class="content__resume-btn" href="files/resume.docx" download>Скачать резюме
