--- a/pages/career.html
+++ b/pages/career.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="../style.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500|Open+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-	<title>Document</title>
+	<title>Ihnatenko site</title>
 </head>
 <body>
 	
