--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="../style.css">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500|Open+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-	<title>Document</title>
+	<title>Ihnatenko site</title>
 </head>
 <body>
 	
@@ -67,20 +67,59 @@
 						</ul>
 					</nav>
 
-				<main class="content portfolio">
-					<div class="content__text">
-						<h2 class="content__title">Портфолио</h2>
+				<main class="portfolio">
+					<div class="portfolio-text">
+						<h2 class="content__title-portfolio">Портфолио</h2>
 					</div>
 						<div class="portfolio__inner">
 							<div class="portfolio-block">
-								<div class="portfolio-block-top"></div>
-								<div class="portfolio-block-bottom"></div>
+								<div class="portfolio-block__previev">
+								  <img src="../3.jpg"class="portfolio-block__image"> </div>
+								<div class="portfolio-block__description">
+									<h3 class="description-name">Active-Box</h3>
+									<h4 class="description">Лендинг</h4>
+								</div>
 							</div>
-							<div class="portfolio-block"></div>
-							<div class="portfolio-block"></div>
-							<div class="portfolio-block last"></div>
-							<div class="portfolio-block last"></div>
-							<div class="portfolio-block last"></div>
+							<div class="portfolio-block">
+								<div class="portfolio-block__previev">
+								  <img src="../3.jpg"class="portfolio-block__image"> </div>
+								<div class="portfolio-block__description">
+									<h3 class="description-name">Active-Box</h3>
+									<h4 class="description">Лендинг</h4>
+								</div>
+							</div>
+							<div class="portfolio-block">
+								<div class="portfolio-block__previev">
+								  <img src="../3.jpg"class="portfolio-block__image"> </div>
+								<div class="portfolio-block__description">
+									<h3 class="description-name">Active-Box</h3>
+									<h4 class="description">Лендинг</h4>
+								</div>
+							</div>
+							<div class="portfolio-block last">
+								<div class="portfolio-block__previev">
+								  <img src="../3.jpg"class="portfolio-block__image"> </div>
+								<div class="portfolio-block__description">
+									<h3 class="description-name">Active-Box</h3>
+									<h4 class="description">Лендинг</h4>
+								</div>
+							</div>
+							<div class="portfolio-block last">
+								<div class="portfolio-block__previev">
+								  <img src="../3.jpg"class="portfolio-block__image"> </div>
+								<div class="portfolio-block__description">
+									<h3 class="description-name">Active-Box</h3>
+									<h4 class="description">Лендинг</h4>
+								</div>
+							</div>
+							<div class="portfolio-block last">
+								<div class="portfolio-block__previev">
+								  <img src="../3.jpg"class="portfolio-block__image"> </div>
+								<div class="portfolio-block__description">
+									<h3 class="description-name">Active-Box</h3>
+									<h4 class="description">Лендинг</h4>
+								</div>
+							</div>
 						</div>
 	
 				</main>
